feat: add example